fixed OpenROV/OpenROV-software#518; final fix so slider events

--- a/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
+++ b/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
@@ -15,7 +15,7 @@
  <template is="dom-repeat" items="{{motors}}">
    <div class="control-group">
       <label class="control-label" for="{{item.name}}">{{__(item.name)}} {{__('Motor')}}</label><span style='margin-left: 4px; color: red' hidden$={{!item.reversed}} >({{__('Reversed')}})</span>
-      <paper-slider pin="true" min="-1" max="1" step="0.001" id="{{item.name}}" on-immediate-value-change='MotorPercentChange'></paper-slider>
+      <paper-slider pin="true" min="-1" max="1" step="0.001" id="{{item.name}}" on-immediate-value-change='MotorPercentChange' on-value-change='MotorPercentChange'></paper-slider>
       <span>[[formatPercent(item.percent)]]</span>
       <div>
         <button on-click='reverseFull'>-1</button>
@@ -36,7 +36,7 @@
         {name:'vertical', percent: 0, reversed: false},
         {name:'starboard', percent: 0, reversed: false}
       ]}
-    },
+    },   
     behaviors: [namespace('behaviors').oROVStandard],
     registerEmitterHanlders: function(emitter){
       var self = this;
@@ -53,11 +53,7 @@
     resolveMotorPercent: function(change,item){
       return this.motorPercent[item];
     },
-    MotorPercentChange: function(e){
-      var motor = e.srcElement.id;
-
-      //this.motorPercent[motor] = e.srcElement.immediateValue;
-      this.set('motors.'+e.model.index+'.percent', e.srcElement.immediateValue);
+    _handleMotorChange: function(){
       var motor_state =  {
                   port: this.motors[0].percent,
                   vertical: this.motors[1].percent,
@@ -68,21 +64,29 @@
       }
       this.fire('motor-state-change',motor_state);
     },
+    MotorPercentChange: function(e){
+      var motor = e.srcElement.id;
+      //this.motorPercent[motor] = e.srcElement.immediateValue;
+      this.set('motors.'+e.model.index+'.percent', e.srcElement.immediateValue);
+      this._handleMotorChange();
+    },
     reverseFull: function(e){
       this.set('motors.'+e.model.index+'.percent', -1.0);
       this.$$('#'+ e.model.item.name).value=-1.0;
+      this._handleMotorChange();
     },
     neutral: function(e){
       this.set('motors.'+e.model.index+'.percent', 0);
       this.$$('#'+ e.model.item.name).value=0;
+      this._handleMotorChange();
     },
     forwardFull: function(e){
       this.set('motors.'+e.model.index+'.percent', 1.0);
       this.$$('#'+ e.model.item.name).value=1.0;
+      this._handleMotorChange();
     },
     formatPercent: function(value){
       return value.toFixed(3);
-
     }
 
   })
