--- a/src/system-plugins/cloud-profile/public/webcomponents/orov-login.html
+++ b/src/system-plugins/cloud-profile/public/webcomponents/orov-login.html
@@ -13,7 +13,7 @@
   </style>
   <template>
       <span hidden="{{displayLoggedIn(loggedIn)}}">
-      <paper-menu-button>
+      <paper-menu-button style="padding:0">
         <paper-icon-button src='[[profilePictureURL]]' class="dropdown-trigger"></paper-icon-button>
         <paper-menu class="dropdown-content">
           <paper-item on-tap="logout">Logout</paper-item>
