--- a/src/plugins/mobile-ui/public/webcomponents/grid-menu/grid-menu.html
+++ b/src/plugins/mobile-ui/public/webcomponents/grid-menu/grid-menu.html
@@ -33,8 +33,7 @@
 			color: white;
 			border-radius: 50%;
 			background-color: rgba( 00, 00, 00, 0.5 );
-			width: 60px;
-			height: 60px;
+			height: 100%;
 		}
 
 		#container
