--- a/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
+++ b/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
@@ -6,6 +6,10 @@
    paper-slider {
       width: 80%;
    }
+   .control-group {
+      margin-top: 10px;
+      background-color: aliceblue;
+   }
 
 </style>
 <template>
